NetBSD Problem Report #56948

From martin@duskware.de  Mon Aug  1 10:03:39 2022
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 5E6611A921F
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  1 Aug 2022 10:03:39 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: eqos(4) never receives IPv6 mcast ethernet packets
X-Send-Pr-Version: 3.95

>Number:         56948
>Category:       kern
>Synopsis:       eqos(4) never receives IPv6 mcast ethernet packets
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Aug 01 10:05:01 +0000 2022
>Closed-Date:    Sat Aug 06 17:56:40 +0000 2022
>Last-Modified:  Sat Aug 06 17:56:40 +0000 2022
>Originator:     Martin Husemann
>Release:        NetBSD 9.99.99
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD plug.duskware.de 9.99.99 NetBSD 9.99.99 (GENERIC64) #318: Wed Jul 27 18:16:42 CEST 2022 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/evbarm/compile/GENERIC64 evbarm
Architecture: aarch64
Machine: evbarm
>Description:

When this machine configures IPv6 and I start using it (e.g. by a ping6 to
some outside machine) it does the standard NDP dance with the (fixed)
router:

10:39:39.905231 e2:0c:f9:36:da:cc (oui Unknown) > 33:33:ff:79:54:ca (oui Unknown), ethertype IPv6 (0x86dd), length 86: (hlim 255, next-header ICMPv6 (58) payload length: 32) 2001:470:1f0b:e84:e00c:f9ff:fe36:dacc > ff02::1:ff79:54ca: [icmp6 sum ok] ICMP6, neighbor solicitation, length 32, who has fe80::3ea6:2fff:fe79:54ca
          source link-address option (1), length 8 (1): e2:0c:f9:36:da:cc
            0x0000:  e20c f936 dacc
10:39:39.905981 3c:a6:2f:79:54:ca (oui Unknown) > e2:0c:f9:36:da:cc (oui Unknown), ethertype IPv6 (0x86dd), length 90: (hlim 255, next-header ICMPv6 (58) payload length: 32) fe80::3ea6:2fff:fe79:54ca > 2001:470:1f0b:e84:e00c:f9ff:fe36:dacc: [icmp6 sum ok] ICMP6, neighbor advertisement, length 32, tgt is fe80::3ea6:2fff:fe79:54ca, Flags [router, solicited, override]
          destination link-address option (2), length 8 (1): 3c:a6:2f:79:54:ca
            0x0000:  3ca6 2f79 54ca

The neighbour solicitation is sent to the ethernet IPv6 multicast group ff,
with destination mac address prefix 33:33:ff:, while the reply is sent
to the unicast mac adress.

If after some time (neighbour chache expired on the router) I do the same
again, the router sends a neighbour solicitation for this machines public
IPv6 adress, again using the 33:33:ff: mac prefix for IPv6 multicast.
Same happens when I try to ping6 this machine from others on the local
network (using either the link local or the public IPv6 address).

The eqos(4) driver never receives any of the 33:33:ff:... destined
ethernet packets (even if a tcpdump is running, so the interface
should be in promiscous mode).

>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56948 CVS commit: src/sys/dev/ic
Date: Sat, 6 Aug 2022 17:53:49 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Aug  6 17:53:49 UTC 2022

 Modified Files:
 	src/sys/dev/ic: dwc_eqos.c

 Log Message:
 PR 56948: fix multicast hash filter setup


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/sys/dev/ic/dwc_eqos.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 06 Aug 2022 17:56:40 +0000
State-Changed-Why:
fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.