PR 56948: fix multicast hash filter setup